--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,8 @@ services:
     volumes:
       - .data/CTFd/logs:/var/log/CTFd
       - .data/CTFd/uploads:/var/uploads
-      - ./CTFd:/opt/CTFd:ro
+      - ./CTFd:/opt/CTFd
+      - ./webhook-plugin:/opt/CTFd/CTFd/plugins/webhook-plugin
     depends_on:
       - db
     networks:
