--- a/webhooks/mattermost/Dockerfile
+++ b/webhooks/mattermost/Dockerfile
@@ -2,11 +2,11 @@ FROM python
 
 WORKDIR /
 
-ENV MATTERMOST_BOT_URL=
-ENV MATTERMOST_BOT_CHANNEL=
-ENV MATTERMOST_BOT_USERNAME=
-ENV MATTERMOST_BOT_ICON_EMOJI=
-ENV MATTERMOST_BOT_AUTH_TOKEN=
+ENV MATTERMOST_WEBHOOK_URL=
+ENV MATTERMOST_WEBHOOK_CHANNEL=
+ENV MATTERMOST_WEBHOOK_USERNAME=
+ENV MATTERMOST_WEBHOOK_ICON_EMOJI=
+ENV MATTERMOST_WEBHOOK_AUTH_TOKEN=
 
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
