--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -59,7 +59,7 @@ services:
       - ctfd
   
   mattermost:
-    build: bots/mattermost
+    build: webhooks/mattermost
     environment:
       - MATTERMOST_WEBHOOK_URL=https://mattermost.pwn2own.com/hooks/hook_id
       - MATTERMOST_WEBHOOK_CHANNEL=announcements
