--- a/webhooks/mattermost/Dockerfile
+++ b/webhooks/mattermost/Dockerfile
@@ -2,6 +2,8 @@ FROM python
 
 WORKDIR /
 
+ENV MATTERMOST_WEBHOOK_IS_BOT=
+ENV MATTERMOST_WEKHOOK_BOT_TOKEN=
 ENV MATTERMOST_WEBHOOK_URL=
 ENV MATTERMOST_WEBHOOK_CHANNEL=
 ENV MATTERMOST_WEBHOOK_USERNAME=
